--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = inventory
+inventory      = ../orchestration/inventory
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -99,7 +99,7 @@ timeout = 30
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
-log_path = ~/Documents/oracle-db-build/logs/ansible.log
+log_path = logs/ansible.log
 
 # default module name for /usr/bin/ansible
 #module_name = command
