Completed PSU 19.21 Apply * Issue #17 resolved manually and through installation of Perl * Issue #18 resolved manually

--- a/install_V19C_database.yml
+++ b/install_V19C_database.yml
@@ -68,6 +68,19 @@
   become_user:          root
 
 # ------------------------------------------------------------------------------
+# Apply fix as recommended by "OPatch apply for OJVM RU fails with "make: perl:
+# Command not found make: *** [ins_rdbms.mk:573: javavm_refresh] Error 127"
+# (Doc ID 2978451.1)"
+# ------------------------------------------------------------------------------
+
+- name:                 "Install Perl"
+  ansible.builtin.yum:
+    name:               perl
+    state:              present
+  become:               yes
+  become_user:          root
+
+# ------------------------------------------------------------------------------
 # Create directories and scripts for database installation and patching
 # ------------------------------------------------------------------------------
 
